Added resume to website

--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
                 </div>
               </div>
             </div>
+
+          <!-- Google Docs Viewer / Resume -->
+    <div class="row">
+      <div class="col-md-12">
+        <!-- PDF Embed using Google Docs Viewer -->
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vTkwwFgWycQe9mmpbu4LIp7N8iXn63mp8My_8yq9XSwGw5hLusfjJoN74RukN6E8ttXeYLbTJZ1JRtL/pub?embedded=true" style="width:100%; height:600px;" frameborder="0"></iframe>
+      </div>
+    </div>
+  </div>
           </section>
 		  <!-- Header Image End -->
         </header>
